updated incorrect problem

--- a/PythonProblems.ipynb
+++ b/PythonProblems.ipynb
@@ -139,10 +139,10 @@
     "    def __init__(name, weight):\n",
     "        self.name = name\n",
     "        self.weight = weight\n",
+    "        \n",
     "    def cuteness(self):\n",
     "        hello()\n",
-    "        print('My cat, {}, is this cute: {}!!!!!'+ r'(=^._.^=)'\\\n",
-    "              .format(name,power(self.weight,2)))"
+    "        print('My cat, {}, is this cute: {}!!!!!'.format(name,power(self.weight,2)) + r'(=^._.^=)')"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "metadata": {},
    "source": [
     "### Part B\n",
-    "Use python to read in the ```oldfaithful.txt``` (I would use __numpy__.readtxt) and plot it (columns 2 and 3, as dots not lines) using __matplotlib__ with appropriate labels."
+    "Use python to read in the ```oldfaithful.txt``` (I would use __numpy__.readtxt) and plot columns 2 vs 3, as dots not lines, using __matplotlib__ with appropriate labels."
    ]
   },
   {
